Αποθήκευση πριν τον έλεγχο της EntityGenerator